# RPC

./: CMakeLists.txt  README.md  autoinstall.sh  thinkpoint.md
config/: rpc.conf
example/: CMakeLists.txt  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cpp
example/caller/: CMakeLists.txt  userclient.cpp
include/: protocol.pb.h  rpcapplication.h  rpcchannel.h  rpcconfig.h  rpccontroller.h  rpckeepalive.h  rpcprovider.h  rpcredisutil.h  rpcserverlog.h  rpczookeeperutil.h
log/: log2024-7-27.txt  log2024-7-28.txt  log2024-7-30.txt
src/: CMakeLists.txt  protocol.pb.cc  protocol.proto  rpcapplication.cpp  rpcchannel.cpp  rpcconfig.cpp  rpccontroller.cc  rpckeepalive.cpp  rpcprovider.cc  rpcredisutil.cpp  rpcserverlog.cpp  rpczookeeperutil.cpp
test/protobuf/: main.cpp  test  test.pb.cc  test.pb.h  test.proto
